爆弾を追加

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,8 +61,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Blast.cs" />
     <Compile Include="Assets\Scripts\CorpseCamera.cs" />
     <Compile Include="Assets\Scripts\CorpseState.cs" />
+    <Compile Include="Assets\Scripts\Explosion.cs" />
+    <Compile Include="Assets\Scripts\ExplosionSystem.cs" />
     <Compile Include="Assets\Scripts\Gun.cs" />
     <Compile Include="Assets\Scripts\TestPlayerControler2.cs" />
     <Compile Include="Assets\Scripts\回転.cs" />
